ignore irrelevant files

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 *.wcfg
 *.xpr
 archive_project_summary.txt
+dfx_runtime.txt
+temp_test.hex
 
 # Project-specific (safety net)
 simple_riscV.cache/
@@ -26,8 +28,6 @@ simple_riscV.hw/
 simple_riscV.ip_user_files/
 simple_riscV.sim/
 simple_riscV/program_init/
-simple_riscV/dfx_runtime
-simple_riscV/temp_test
 
 # OS / misc
 Thumbs.db
